# staker-overworld-simulator

./: Cargo.toml  README.md
assets/: stalker-factions.yaml
assets/prefab/: stalker_default.ron
assets/texture/: stalkerAnomalyMap.ron
assets/texture/faction_badges/: badge.ron
config/: bindings.ron  display.ron  stalker-factions.ron
src/: gameboard.rs  gameboard_controller.rs  gameboard_view.rs  lib.rs  main.rs
src/backbone/: simulator.rs
src/components/: map.rs  mod.rs  npc.rs
src/entity/: mod.rs
src/entity/npc/: mod.rs
src/npc/: mod.rs
src/prefabs/: mod.rs  stalker.rs
src/systems/: camera_limits.rs  mod.rs  panning.rs  position.rs  zooming.rs
src/utilities/: control.rs  mod.rs
