[package]
name = "StalkerSim"
version = "0.1.0"
authors = ["Garret Richardson <garret.richardson.481@my.csun.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
pistoncore-glutin_window = "0.63.0"
specs = { version = "0.15.0", features = ["specs-derive"] }

[lib]
name = "simulation"
path = "src/lib.rs"